@@ -477,14 +477,22 @@ tasks.withType(JavaExec).configureEach { task ->
     }
 }
 
-
-// Task to run scala tests, as Scala tests not picked up by Gradle by default.
-// You can run it with a number of threads: ./gradlew spec -PnumThreads=4
 task spec(dependsOn: ['testClasses'], type: JavaExec) {
     def n = project.hasProperty('numThreads') ? numThreads : 4
     mainClass = 'org.scalatest.tools.Runner'
-    args = ['-R', 'build/classes/scala/test', '-h', 'build/scalatest-report', '-u', 'build/scalatest-report-xml', '-oD', '-l', 'beam.tags.ExcludeRegular',
-            "-PS$n", '-T', '120', '-W', '300', '60']
+
+    // Install the custom security manager to catch System.exit() when running tests
+    jvmArgs "-Djava.security.manager=beam.NoExitForSpecSecurityManager"
+
+    args = ['-R', 'build/classes/scala/test',
+            '-h', 'build/scalatest-report',
+            '-u', 'build/scalatest-report-xml',
+            '-oD',
+            '-l', 'beam.tags.ExcludeRegular',
+            "-C", "beam.TestStatusReporter",   // custom reporter, to track running tests
+            "-PS$n",
+            '-T', '120',
+            '-W', '300', '60']
     classpath = sourceSets.test.runtimeClasspath
 }
 build.dependsOn spec
